@@ -3,7 +3,7 @@
 [moddesc   {Tcl NNTP Client Library}]
 [titledesc {Tcl client for the NNTP protocol}]
 [require Tcl  8.2]
-[require nntp [opt 0.2]]
+[require nntp [opt 0.2.1]]
 [description]
 
 The package [package nntp] provides a simple Tcl-only client library
