@@ -9,4 +9,4 @@
 # full path name of this file's directory.
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded nntp 0.2 [list source [file join $dir nntp.tcl]]
+package ifneeded nntp 0.2.1 [list source [file join $dir nntp.tcl]]
